--- a/template/backend-home.html
+++ b/template/backend-home.html
@@ -20,7 +20,7 @@ Backend
         <div class="listing">
             <div id="title">User List</div>
             <div class="sample">
-                <div>Sample response</div>
+                <div class="sample-def">Sample response</div>
                 <div class="json-response">
                 <pre>
                     <code>
@@ -44,13 +44,13 @@ Backend
                     </pre>
                 </div>
             </div>
-            <div><a href={% url 'core:user-list' %}>View API listing</a><button class="btn">Copy Link</button></div>
+            <div><a href={% url 'core:user-list' %} ></a><button class="btn">Copy API Link</button></div>
         </div>
 
         <div class="listing">
             <div id="title">Product list</div>
             <div class="sample">
-                <div>Sample response</div>
+                <div class="sample-def">Sample response</div>
                 <div class="json-response">
                     <pre>
                     {
@@ -63,7 +63,7 @@ Backend
                     </pre>
                 </div>
             </div>
-            <div><a href={% url 'core:product-list' %}>View API listing</a><button class="btn">Copy Link</button></div>
+            <div><a href={% url 'core:product-list' %}></a><button class="btn">Copy API Link</button></div>
         </div>
 
     </div>
