Modify the base template and readme.md

--- a/template/backend-home.html
+++ b/template/backend-home.html
@@ -19,7 +19,7 @@ Backend
 <h1 class="main-h1">Micro E-Commerce Backend Engine</h1>
 <div>
     <h3 class="sub">
-        APIs available for access (accessible to only authorized personnels)
+        APIs available for access
     </h3>
 
     <div class="detail">
